[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="VelsLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 14.0
offset_top = 600.0
text = "vx: 0.0  vy: 0.0"

[node name="HoldLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
text = "Vastgehouden: nee"

[node name="StatsLabel" type="Label" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_top = 36.0
text = "Attempts: 0  Completed: 0  Best: - s"
